fix overflow on right side FINALLY

--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -2,9 +2,6 @@
     z-index: 1;
     background-color: #f1f1f1;
 }
-@media screen and (min-width: 3px) {
-    
-}
 
 .Nav.Link[aria-current] {
     background-color: black;
